<resources>
  <string name="app_name">WakeUp</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_home">Home</string>
  <string name="menu_activities">Activities</string>
  <string name="menu_todo">Todo</string>
  <string name="menu_weather">Weather</string>
  <string name="menu_calendar">Calendar</string>
  <string name="menu_settings">Settings</string>

  <string name="login_failure_message">Unable to Sign-in with provided credentials</string>
  <string name="add_task">Add task</string>
</resources>