<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">

    <item
      android:id="@+id/nav_home"
      android:title="@string/menu_home"/>

    <item
      android:id="@+id/nav_activities"
      android:title="@string/menu_activities"/>

    <item
      android:id="@+id/nav_todo"
      android:title="@string/menu_todo"/>

    <item
      android:id="@+id/nav_calendar"
      android:title="@string/menu_calendar"/>

    <item
      android:id="@+id/nav_weather"
      android:title="@string/menu_weather"/>

  </group>

  <group>

    <item
      android:id="@+id/nav_settings"
      android:title="@string/menu_settings"/>

  </group>

</menu>