<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_home">

  <fragment
    android:id="@+id/nav_home"
    android:label="@string/menu_home"
    android:name="edu.cnm.deepdive.wakeup.controller.ui.home.HomeFragment"
    tools:layout="@layout/fragment_activities"/>

  <fragment
    android:id="@+id/nav_activities"
    android:label="@string/menu_activities"
    android:name="edu.cnm.deepdive.wakeup.controller.ui.activities.ActivitiesFragment"
    tools:layout="@layout/fragment_activities"/>

  <fragment
    android:id="@+id/nav_todo"
    android:label="@string/menu_todo"
    android:name="edu.cnm.deepdive.wakeup.controller.ui.todo.TodoFragment"
    tools:layout="@layout/fragment_todo"/>

  <fragment
    android:id="@+id/nav_weather"
    android:label="@string/menu_weather"
    android:name="edu.cnm.deepdive.wakeup.controller.ui.weather.WeatherFragment"
    tools:layout="@layout/fragment_calendar"/>

  <fragment
    android:id="@+id/nav_calendar"
    android:label="@string/menu_calendar"
    android:name="edu.cnm.deepdive.wakeup.controller.ui.calendar.CalendarFragment"
    tools:layout="@layout/fragment_calendar"/>

  <fragment
    android:id="@+id/nav_settings"
    android:label="@string/menu_settings"
    android:name="edu.cnm.deepdive.wakeup.controller.ui.settings.SettingsFragment"
    tools:layout="@layout/fragment_settings"/>


</navigation>